# tensorrt-rs

tensorrt/: Cargo.toml
tensorrt-rs-sys/: Cargo.toml  build.rs
tensorrt-rs-sys/cxx/include/: runtime.h
tensorrt-rs-sys/cxx/src/: runtime.cpp
tensorrt-rs-sys/src/: lib.rs  runtime.rs
tensorrt/src/: engine.rs
