[package]
name = "tensorrt"
version = "10.7.0"
authors = ["Ming Yang <ymviv@qq.com>"]
description = "Rust wrapper for NVIDIA TensorRT"
repository = "https://github.com/vivym/tensorrt-rs"
readme = "README.md"
keywords = ["tensorrt", "nvidia", "cuda", "ffi"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-rs = "0.1"
tensorrt-rs-sys = "10.7.0"
thiserror = "1"
clap = { version = "4", features = ["derive"] ,optional = true }
tch = { version = "0.14.0", optional = true}


# Install extra deps and compile examples only if the `examples` feature is enabled
[features]
examples = ["dep:clap","dep:tch"]

[[example]]
name = "pp_ocr"  # Name of your binary
path = "examples/pp_ocr.rs"
required-features = ["examples"]

[[example]]
name = "clip"  # Name of your binary
path = "examples/clip.rs"
required-features = ["examples"]
